--- a/www/css/materialize.css
+++ b/www/css/materialize.css
@@ -7,6 +7,10 @@
   background-color: #e51c23 !important;
 }
 
+.customcolores {
+  background-color: #159A9C !important;
+}
+
 .materialize-red-text {
   color: #e51c23 !important;
 }
@@ -2239,6 +2243,7 @@ pre {
  */
 a {
   background-color: transparent;
+  
   /* 1 */
   -webkit-text-decoration-skip: objects;
   /* 2 */
@@ -3085,7 +3090,7 @@ td, th {
 }
 
 .collection .collection-item {
-  background-color: #fff;
+  background-color: #DEEFE7;
   line-height: 1.5rem;
   padding: 10px 20px;
   margin: 0;
@@ -4269,7 +4274,7 @@ table span.badge {
 
 nav {
   color: #fff;
-  background-color: #ee6e73;
+  background-color: #159A9C;
   width: 100%;
   height: 56px;
   line-height: 56px;
@@ -6623,6 +6628,7 @@ textarea.materialize-textarea + label:after, .select-wrapper + label:after {
   border: 0;
   -webkit-box-shadow: none;
           box-shadow: none;
+  background-color: #159A9C !important;
 }
 
 .input-field input[type=search]:focus:not(.browser-default) {
@@ -8477,10 +8483,19 @@ input[type=range]::-ms-thumb {
   visibility: visible;
   -webkit-animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
           animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
-  -webkit-transition: opacity .3s, visibility 0s 1s, -webkit-transform .3s;
-  transition: opacity .3s, visibility 0s 1s, -webkit-transform .3s;
-  transition: opacity .3s, transform .3s, visibility 0s 1s;
-  transition: opacity .3s, transform .3s, visibility 0s 1s, -webkit-transform .3s;
+  -webkit-transition: opacity .3s,
+ visibility 0s 1s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ visibility 0s 1s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s 1s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s 1s,
+ -webkit-transform .3s;
 }
 
 .tap-target {
@@ -8533,10 +8548,19 @@ input[type=range]::-ms-thumb {
 
 .tap-target-wave::after {
   visibility: hidden;
-  -webkit-transition: opacity .3s, visibility 0s, -webkit-transform .3s;
-  transition: opacity .3s, visibility 0s, -webkit-transform .3s;
-  transition: opacity .3s, transform .3s, visibility 0s;
-  transition: opacity .3s, transform .3s, visibility 0s, -webkit-transform .3s;
+  -webkit-transition: opacity .3s,
+ visibility 0s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ visibility 0s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s,
+ -webkit-transform .3s;
   z-index: -1;
 }
 
