Ahora da adaptacion de diseño no depende de materializeCSS y lo hace s través de style.css

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -67,6 +67,9 @@ footer.page-footer {
   margin: 0;
 }
 
-.nav{
+nav{
   background-color: #159A9C !important;
+}
+.alcachofa{
+  background-color: red;
 }
